--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "bootstrap": "^3.3.6",
     "chart.js": "^1.1.0",
     "express": "^4.13.4",
-    "firebase": "^2.4.2",
+    "firebase": "^3.0.3",
+    "font-awesome": "^4.6.1",
     "jquery": "^2.2.2"
   },
   "devDependencies": {
