--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "*",
-    "grunt-nodemon": "*"
+    "grunt-nodemon": "*",
+    "grunt-replace": "^1.0.1"
   },
   "scripts": {
     "start": "node app.js"
