--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-cli": "*",
     "grunt-browserify": "^3.2.0",
     "grunt-concat-css": "*",
     "grunt-concurrent": "*",
