--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
   "license": "MIT",
   "version": "0.0.1",
   "dependencies": {
+    "express": "^4.13.4"
+  },
+  "devDependencies": {
     "angular": "^1.5.3",
     "angular-route": "^1.5.3",
     "bootstrap": "^3.3.6",
     "chart.js": "^1.1.0",
-    "express": "^4.13.4",
     "firebase": "^3.0.3",
     "font-awesome": "^4.6.1",
-    "jquery": "^2.2.2"
-  },
-  "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "*",
     "grunt-browserify": "^3.2.0",
@@ -26,7 +25,8 @@
     "grunt-contrib-watch": "*",
     "grunt-html2js": "^0.3.6",
     "grunt-nodemon": "*",
-    "grunt-replace": "^1.0.1"
+    "grunt-replace": "^1.0.1",
+    "jquery": "^2.2.2"
   },
   "scripts": {
     "start": "node bitdisc.js"
