--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "angular-route": "^1.5.3",
     "bootstrap": "^3.3.6",
     "chart.js": "^1.1.0",
-    "firebase": "^3.0.3",
+    "firebase": "3.0.3",
     "font-awesome": "^4.6.1",
     "grunt": "^0.4.5",
     "grunt-cli": "*",
